--- a/index.html
+++ b/index.html
@@ -399,7 +399,12 @@ nav.bottom-nav {
     padding: 0.4rem 0;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
+
 nav.bottom-nav button {
     background: none;
     border: none;
